# keycloak-auth-microservice

./: .coveragerc  .env.example  .flake8  .gitignore  Makefile  README.md  env.example  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/: __init__.py  cli.py
src/api/: __init__.py  auth.py  groups.py  roles.py  users.py
src/cli/: __init__.py  service.py
src/commun/: deps.py
src/config/: __init__.py  base.py  keycloak.py
src/model/: schema.py
src/services/auth/: __init__.py  api.py  schema.py
src/utils/: deps.py
tests/: .test.env  conftest.py  test_auth_api.py  test_commun_deps.py
