[tool.poetry]
name = "keycloak-user-management"
version = "0.1.0"
description = ""
packages = [{include = "src"}]
authors = ["flavien-hugs <flavienhugs@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.97.0", extras = ["all"]}
python-keycloak = "^3.3.0"
python-dotenv = "^1.0.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
app = 'src.cli:app'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = 'tests/.test.env'
